# worldchampsdaily

./: .gitignore  README.md  pyproject.toml
.github/workflows/: woldchampsdaily.yml
config/: note_sources.json  tracking_rules.json
data/: historical_player_stats_full.json  player_universe.sample.json  player_universe_seed_v1.json  venezuela_mlb_candidates_draft.json  wbc_2026_venezuela_core.json
docs/: feature-log.md  live-tracking-audit.md  mvp-plan.md  player-universe-audit.md  player-universe-notes.md  player-universe-strategy.md  tracking-filter.md
docs/sources/: debut-registry-2010-2019.md  debut-registry-2020-2026.md
scripts/: run_daily_publish.sh
site/: index.html
site/reports/: 2026-04-02.html  2026-04-03.html  2026-04-08.html  2026-04-10.html  2026-04-11.html  2026-04-13.html  2026-04-14.html  2026-04-15.html  2026-04-16.html  2026-04-17.html  2026-04-18.html  2026-04-19.html  2026-04-20.html  2026-04-21.html  2026-04-22.html  2026-04-23.html  2026-04-24.html  2026-04-25.html  2026-04-26.html  2026-04-27.html  2026-04-28.html  2026-04-29.html  2026-04-30.html  2026-05-01.html  2026-05-02.html  2026-05-03.html  2026-05-04.html  2026-05-05.html  2026-05-06.html  2026-05-07.html  2026-05-08.html  2026-05-09.html  2026-05-10.html  2026-05-11.html  2026-05-12.html  2026-05-13.html  2026-05-14.html  2026-05-15.html  2026-05-16.html  2026-05-17.html  (+68 more)
src/venezuelan_mlb_report/: __init__.py  __main__.py  ingest.py  labels.py  live_report.py  mlb_api.py  models.py  publish.py  report.py  sample_data.py  storage.py  universe.py
tests/: test_labels.py
