[project]
name = "venezuelan-mlb-report"
version = "0.1.0"
description = "Daily email-style report for Venezuelan MLB players."
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
